tests/NormalTests/paczka1/fuzzy1/30730896.err
Error in line 2: PTZwMOGeV8 A89 78,9
Error in line 7: X4oX A89 91,0
Error in line 8: cq16gSQt S563 50,3
Error in line 17: cq16gSQt A89 87,8
Error in line 25: cq16gSQt A17 91,2
Error in line 13: X4oX S32 39,8
Error in line 28: 4CJwT25zF S563 7,7
Error in line 35: cq16gSQt Q89 39,9
Error in line 36: A17 A17 156,23
Error in line 33: useGNZIx A89 12,8
Error in line 30: X4oX S563 5,9
